--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
   "name": "hear-you-there",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
-  },
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/seannemann21/HearYouThere.git"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/seannemann21/HearYouThere/issues"
+  },
+  "homepage": "https://github.com/seannemann21/HearYouThere#readme",
+  "dependencies": {
+    "@google-cloud/storage": "^2.4.2",
+    "@google-cloud/vision": "^0.24.0",
+    "axios": "^0.18.0",
+    "express": "^4.16.4",
+    "querystring": "^0.2.0",
+    "request": "^2.88.0"
+  }
 }
